--- a/fundraiser/truffle/package.json
+++ b/fundraiser/truffle/package.json
@@ -6,9 +6,13 @@
   "dependencies": {
     "@truffle/hdwallet-provider": "^2.0.10"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "prettier": "^2.7.1",
+    "prettier-plugin-solidity": "^1.0.0-dev.22"
+  },
   "scripts": {
-    "test": "truffle test"
+    "test": "truffle test",
+    "format": "prettier --write 'contracts/**/*.sol'"
   },
   "author": "",
   "license": "MIT"
